--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,20 @@
     <title></title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sono">
+    <style>
+      .navbar-text { font-family: 'Sono', sans-serif;}
+
+
+
+      .lnav { margin: right;}
+      .centernav { margin: auto; width: 50%;}
+
+
+
+    </style>
+
 </head>
 
 
@@ -22,23 +36,26 @@
 
 
 
-            <nav class="navbar navbar-expand-lg navbar-light bg-light" style="padding: 1em;">
+            <nav class="navbar navbar-text navbar-expand-lg navbar-light" style="padding: 1em; text-transform: uppercase; font-size:22px;">
               <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" width="30" height="24"> PLAS A.D.</a>
+                <a class="navbar-brand " href="#" style="font-size:65px;">
+                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" width="30" height="24"> PLAS </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav me-auto mb-2 mb-lg-0" align="center">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-size:22px;">
+                  <ul class="navbar-nav centernav me-auto mb-2 mb-lg-0" align="center">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Ad</a>
+                      <a class="nav-link centernav" aria-current="page" href="#">Ad</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Design</a>
+                      <a class="nav-link centernav" href="#">Design</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link centernav" href="#">AFFE</a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <a class="nav-link centernav dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Media
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -59,7 +76,7 @@
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Title</h1>
             <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-            <button class="btn btn-primary btn-lg" type="button">Example button</button>
+            <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
           </div>
         </div>
 
@@ -68,14 +85,14 @@
             <div class="h-100 p-5 text-bg-dark rounded-3">
               <h2>Change the background</h2>
               <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-              <button class="btn btn-outline-light" type="button">Example button</button>
+              <button class="btn btn-outline-light" type="button">Veiw Case Study</button>
             </div>
           </div>
           <div class="col-md-6">
             <div class="h-100 p-5 bg-light border rounded-3">
               <h2>Add borders</h2>
               <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-              <button class="btn btn-outline-secondary" type="button">Example button</button>
+              <button class="btn btn-outline-secondary" type="button">Veiw Case Study</button>
             </div>
           </div>
         </div>
@@ -85,21 +102,21 @@
             <div class="h-100 p-5 text-bg-dark rounded-3">
               <h2>Change the background</h2>
               <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-              <button class="btn btn-outline-light" type="button">Example button</button>
+              <button class="btn btn-outline-light" type="button">Veiw Case Study</button>
             </div>
           </div>
           <div class="col-md-4">
             <div class="h-100 p-5 bg-light border rounded-3">
               <h2>Add borders</h2>
               <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-              <button class="btn btn-outline-secondary" type="button">Example button</button>
+              <button class="btn btn-outline-secondary" type="button">Veiw Case Study</button>
             </div>
           </div>
           <div class="col-md-4">
             <div class="h-100 p-5 bg-light border rounded-3">
               <h2>Add borders</h2>
               <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-              <button class="btn btn-outline-secondary" type="button">Example button</button>
+              <button class="btn btn-outline-secondary" type="button">Veiw Case Study</button>
             </div>
           </div>
         </div>
