--- a/index.htm
+++ b/index.htm
@@ -8,16 +8,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sono">
     <style>
-      .navbar-text { font-family: 'Sono', sans-serif;}
+        @import url('https://fonts.googleapis.com/css2?family=Sono:wght@400;600;800&display=swap');
+        .navbar-text { font-family: 'Sono', sans-serif; font-weight: 400;}
 
 
 
-      .lnav { margin: right;}
-      .centernav { margin: auto; width: 50%;}
-
-
+        .lnav { margin: auto; width: 50%;}
+        .centernav { margin: auto;}
 
     </style>
 
@@ -38,13 +36,12 @@
 
             <nav class="navbar navbar-text navbar-expand-lg navbar-light" style="padding: 1em; text-transform: uppercase; font-size:22px;">
               <div class="container-fluid">
-                <a class="navbar-brand " href="#" style="font-size:65px;">
-                    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" width="30" height="24"> PLAS </a>
+                <a class="navbar-brand " href="#" style="font-size:75px;"> PLAS </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-size:22px;">
-                  <ul class="navbar-nav centernav me-auto mb-2 mb-lg-0" align="center">
+                <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-size:26px;">
+                  <ul class="navbar-nav centernav me-auto mb-2 mb-lg-0 lnav">
                     <li class="nav-item">
                       <a class="nav-link centernav" aria-current="page" href="#">Ad</a>
                     </li>
@@ -72,7 +69,7 @@
 
         </header>
 
-        <div class="p-5 mb-4 bg-light rounded-3">
+        <div class="p-5 mb-4 border rounded-3">
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Title</h1>
             <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
@@ -113,7 +110,7 @@
             </div>
           </div>
           <div class="col-md-4">
-            <div class="h-100 p-5 bg-light border rounded-3">
+            <div class="h-100 p-5 border rounded-3">
               <h2>Add borders</h2>
               <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
               <button class="btn btn-outline-secondary" type="button">Veiw Case Study</button>
@@ -122,7 +119,7 @@
         </div>
 
         <footer class="pt-3 mt-4 text-muted border-top">
-          © 2022
+          PLAS AD © 2022
         </footer>
       </div>
     </main>
