--- a/index.htm
+++ b/index.htm
@@ -7,17 +7,8 @@
     <title></title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="style.css">
 
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Sono:wght@400;600;800&display=swap');
-        .navbar-text { font-family: 'Sono', sans-serif; font-weight: 400;}
-
-
-
-        .lnav { margin: auto; width: 50%;}
-        .centernav { margin: auto;}
-
-    </style>
 
 </head>
 
@@ -69,7 +60,7 @@
 
         </header>
 
-        <div class="p-5 mb-4 border rounded-3">
+        <div class="p-5 mb-4 border rounded-3" style="background:#b4ffff;">
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Title</h1>
             <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
@@ -126,7 +117,7 @@
 
 
 
- 
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>  </head>
