--- a/index.htm
+++ b/index.htm
@@ -36,6 +36,7 @@
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-size:26px;">
+                  <center>
                   <ul class="navbar-nav centernav me-auto mb-2 mb-lg-0 lnav">
                     <li class="nav-item">
                       <a class="nav-link centernav" aria-current="page" href="#">Ad</a>
@@ -50,14 +51,15 @@
                       <a class="nav-link centernav dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Media
                       </a>
-                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdown"><center>
                         <li><a class="dropdown-item" href="#">Music</a></li>
                         <li><a class="dropdown-item" href="#">Film</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Social</a></li>
+                        <li><a class="dropdown-item" href="#">Social</a></li></center>
                       </ul>
                     </li>
                   </ul>
+
                 </div>
               </div>
             </nav>
@@ -112,6 +114,54 @@
             </div>
           </div>
         </div>
+
+        <div class="p-5 mb-4 border rounded-3" style="background:#b4ffff;">
+          <h1><center> Clients </center></h1>
+            <div class="row p-5">
+              <div class="col-md-3">
+                <p>Using a series of utilities.</p>
+                <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+              </div>
+
+              <div class="col-md-3">
+                <p>Using a series of utilities.</p>
+                <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+              </div>
+
+              <div class="col-md-3">
+                <p>Using a series of utilities.</p>
+                <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+              </div>
+
+              <div class="col-md-3">
+                <p>Using a series of utilities.</p>
+                <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+              </div>
+          </div>
+          <div class="row p-5">
+            <div class="col-md-3">
+              <p>Using a series of utilities.</p>
+              <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+            </div>
+
+            <div class="col-md-3">
+              <p>Using a series of utilities.</p>
+              <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+            </div>
+
+            <div class="col-md-3">
+              <p>Using a series of utilities.</p>
+              <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+            </div>
+
+            <div class="col-md-3">
+              <p>Using a series of utilities.</p>
+              <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
+            </div>
+        </div>
+      </div>
+
+
 
         <footer class="pt-3 mt-4 text-muted border-top">
           PLAS AD © 2022
