--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fontawesome.css">
 
     <style media="screen">
 
@@ -26,36 +27,41 @@
       <div class="container py-4">
         <header class="pb-3 mb-4 border-bottom">
 
-
-
-
             <nav class="navbar navbar-text navbar-expand-lg navbar-light" style="padding: 1em; text-transform: uppercase; font-size:22px;">
               <div class="container-fluid">
-                <a class="navbar-brand " href="#" style="font-size:75px;"> PLAS </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
+                <a class="navbar-brand navlinks" href="#" style="font-size:75px;"> PLAS </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #fff; font-size: 30px; line-height:10px; font-weight:600;">
+                  --<br />--<br />--
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent" style="font-size:26px;">
                   <center>
-                  <ul class="navbar-nav centernav me-auto mb-2 mb-lg-0 lnav">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0 lnav">
                     <li class="nav-item">
-                      <a class="nav-link centernav" aria-current="page" href="#">Ad</a>
+                      <a class="nav-link navlinks" aria-current="page" href="#">Ad</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link centernav" href="#">Design</a>
+                      <a class="nav-link navlinks" href="#">Design</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link centernav" href="#">AFFE</a>
+                      <a class="nav-link navlinks" href="#">Clients</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link navlinks" href="#">Shop</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link navlinks" href="#"><i>AFFE</i></a>
                     </li>
                     <li class="nav-item dropdown">
-                      <a class="nav-link centernav dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <a class="nav-link navlinks dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Media
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown"><center>
-                        <li><a class="dropdown-item" href="#">Music</a></li>
-                        <li><a class="dropdown-item" href="#">Film</a></li>
+                        <li><a class="dropdown-item" href="#" style="font-weight:500;">Music</a></li>
+                        <li><a class="dropdown-item" href="#" style="font-weight:500;">Film</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="#">Social</a></li></center>
+                        <li><a class="dropdown-item" href="#" style="font-weight:500;">Physical</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#" style="font-weight:500;">Social</a></li></center>
                       </ul>
                     </li>
                   </ul>
@@ -66,10 +72,19 @@
 
         </header>
 
+        <div class="p-3 pb-md-4 mx-auto text-center" style="background:#b4ffff;">
+            <h1 class="display-4 fw-normal">Text</h1>
+            <p class="fs-5 text-muted">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium vulputate sapien nec sagittis aliquam malesuada. Sit amet purus gravida quis blandit.
+            </p>
+        </div>
+
+        <br />
+
         <div class="p-5 mb-4 border rounded-3" style="background:#b4ffff;">
           <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Title</h1>
-            <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+            <p class="col-md-8 fs-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium vulputate sapien nec sagittis aliquam malesuada. Sit amet purus gravida quis blandit.</p>
             <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
           </div>
         </div>
@@ -77,15 +92,15 @@
         <div class="row align-items-md-stretch mb-4">
           <div class="col-md-6">
             <div class="h-100 p-5 text-bg-dark rounded-3">
-              <h2>Change the background</h2>
-              <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+              <h2>Title</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium vulputate sapien nec sagittis aliquam malesuada. Sit amet purus gravida quis blandit.</p>
               <button class="btn btn-outline-light" type="button">Veiw Case Study</button>
             </div>
           </div>
           <div class="col-md-6">
             <div class="h-100 p-5 bg-light border rounded-3">
-              <h2>Add borders</h2>
-              <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+              <h2>Add Title</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Cursus metus aliquam eleifend mi in nulla. Neque sodales ut etiam sit amet nisl.</p>
               <button class="btn btn-outline-secondary" type="button">Veiw Case Study</button>
             </div>
           </div>
@@ -94,22 +109,22 @@
         <div class="row align-items-md-stretch mb-4">
           <div class="col-md-4">
             <div class="h-100 p-5 text-bg-dark rounded-3">
-              <h2>Change the background</h2>
-              <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
+              <h2>Change the Title</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Cursus metus aliquam eleifend mi in nulla. Neque sodales ut etiam sit amet nisl.</p>
               <button class="btn btn-outline-light" type="button">Veiw Case Study</button>
             </div>
           </div>
           <div class="col-md-4">
             <div class="h-100 p-5 bg-light border rounded-3">
-              <h2>Add borders</h2>
-              <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+              <h2>Title borders</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Cursus metus aliquam eleifend mi in nulla. Neque sodales ut etiam sit amet nisl.</p>
               <button class="btn btn-outline-secondary" type="button">Veiw Case Study</button>
             </div>
           </div>
           <div class="col-md-4">
             <div class="h-100 p-5 border rounded-3">
               <h2>Add borders</h2>
-              <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Cursus metus aliquam eleifend mi in nulla. Neque sodales ut etiam sit amet nisl.</p>
               <button class="btn btn-outline-secondary" type="button">Veiw Case Study</button>
             </div>
           </div>
@@ -137,8 +152,7 @@
                 <p>Using a series of utilities.</p>
                 <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
               </div>
-          </div>
-          <div class="row p-5">
+
             <div class="col-md-3">
               <p>Using a series of utilities.</p>
               <button class="btn btn-primary btn-lg" type="button">Veiw Case Study</button>
@@ -164,7 +178,7 @@
 
 
         <footer class="pt-3 mt-4 text-muted border-top">
-          PLAS AD © 2022
+         <a href="#"> PLAS AD © 2022</a>
         </footer>
       </div>
     </main>
